sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value ecart
  ecart = getNombreValeurs()
  ^AlgCombSort:5: error: not found: value inversion
  inversion = true
  ^AlgCombSort:7: error: not found: value ecart
  while (ecart > 1 && inversion)
         ^AlgCombSort:7: error: not found: value inversion
  while (ecart > 1 && inversion)
                      ^AlgCombSort:9: error: not found: value ecart
    if (ecart > 1)
        ^AlgCombSort:10: error: not found: value ecart
    	ecart = (ecart.toDouble / 1.3).toInt
        ^AlgCombSort:12: error: not found: value i
    i = 0
    ^AlgCombSort:13: error: not found: value inversion
    inversion = false
    ^AlgCombSort:14: error: not found: value i
    while (i + ecart < getNombreValeurs())
           ^AlgCombSort:14: error: not found: value ecart
    while (i + ecart < getNombreValeurs())
               ^AlgCombSort:16: error: not found: value i
    	if (plusPetit(getValeur(i + ecart), getValeur(i)))
                                ^AlgCombSort:16: error: not found: value ecart
    	if (plusPetit(getValeur(i + ecart), getValeur(i)))
                                    ^AlgCombSort:16: error: not found: value i
    	if (plusPetit(getValeur(i + ecart), getValeur(i)))
                                                      ^AlgCombSort:18: error: not found: value inversion
        inversion = true
        ^AlgCombSort:19: error: not found: value i
        echange(i, i + ecart)
                ^AlgCombSort:19: error: not found: value i
        echange(i, i + ecart)
                   ^AlgCombSort:19: error: not found: value ecart
        echange(i, i + ecart)
                       ^AlgCombSort:20: error: not found: value i
    		i += 1;
                ^